--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "backend for sprints ecommerce project",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js",
-    "server": "nodemon ./src/index.js",
+    "start": "node index.js",
+    "server": "nodemon index.js",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
